# Salary-Management

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  currency.py  database.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: employees.py  filters.py  insights.py
backend/app/models/: __init__.py  employee.py
backend/app/repositories/: employee_repository.py
backend/app/schemas/: employee.py
backend/app/services/: employee_service.py  insights_service.py
backend/seed/: first_names.txt  last_names.txt  seed.py
backend/tests/: conftest.py  test_employee_endpoints.py  test_employee_service.py  test_insights_endpoints.py
docs/: AI_USAGE.md  ARCHITECTURE.md  PERFORMANCE.md  PLANNING.md  REQUIREMENTS.md  TRADE_OFFS.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/employees/: page.tsx
frontend/src/components/employees/: delete-dialog.tsx  employee-filters.tsx  employee-form-dialog.tsx  employee-table.tsx  employees-client.tsx  offboard-dialog.tsx
frontend/src/components/insights/: country-chart.tsx  country-table.tsx  dashboard-client.tsx  department-chart.tsx  job-title-chart.tsx  summary-cards.tsx
frontend/src/components/layout/: sidebar.tsx
frontend/src/components/ui/: badge.tsx
frontend/src/lib/: api.ts  chart-colors.ts  colored-bar-shape.tsx  currency.ts
